static/css/css.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');


* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    scroll-behavior: smooth;
    
}


:root {
    --light-gray: #F5F7FA;
    --color-one: #8D6E63 ;
    --steel-blue: #2D3E50;
    --darker-red: #CC0000;
    --white: #FFFFFF;

    --size-xs: 4px;
    --size-sm: 8px;
    --size-md: 16px;
    --size-lg: 32px;
    --size-xl: 64px;
    --size-xlg: 128px;

    --box-shadow : rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
}


body {
    margin: 0;
    padding: 0;
  }

  

a {
    text-decoration: none;
    color: black;
  
}

a:hover {
    text-decoration: underline;
}


/* fonts */
.poppins-regular {
    font-family: "Poppins", sans-serif;
    font-weight: 300;
    font-style: normal;
  }


.montserrat-regular {
    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
  }



/* variables */

.bold {
    font-weight: bold;
}

.center {
    display: flex;
    text-align: center;
    align-items: center;
    justify-content: center;
    
}

.italic {
    font-style: italic;
    font-weight: 300;
}

.red {
    color: var(--darker-red);
}

.green {
    color: darkgreen;
}

.steel-blue {
    color: var(--steel-blue);
}

/* padding */
.padding-xsm {
    padding: var(--size-xs);
}

.padding-sm {
    padding: var(--size-sm);
}

.padding-md {
    padding: var(--size-md);
}

.padding-lg {
    padding: var(--size-lg);
}

.padding-xl {
    padding: var(--size-lg);
}


/* margin */
.margin-xsm {
    margin: var(--size-xs);
}

.margin-sm {
    margin: var(--size-sm);
}

.margin-md {
    margin: var(--size-md);
}

.margin-lg {
    margin: var(--size-lg);
}

.margin-xl {
    margin: var(--size-lg);
}

.margin-top-lg {
    margin-top: var(--size-lg);
}

.margin-bottom-lg {
    margin-bottom: var(--size-lg);
}

.margin-bottom-sm {
    margin-bottom: var(--size-sm);
}

.lightbox-display {
    background: ghostwhite;
    padding-top: var(--size-md);
    padding-bottom: var(--size-md);
    padding-left: var(--size-md);
    border: 2px solid lavender;
}

.flex-space-between {
    display: flex;
    justify-content: space-between;

}



/* icons */
/* nav icons */
.nav-icon {
    width: 24px;
    height: 24px;
}

.nav-icon:hover {
    transform: scale(1.1);
    opacity: 0.6;
}



/* The virtual bank dashboard */
#virtualbank-dashboard .container {
    display: grid;
    grid-template-columns: 25% 75%;
    grid-template-rows: auto;
   
    height: 100vh; /* Full viewport height */
}


#main-body {
    background: rgb(247, 247, 240);
    border-left: 2px solid lavender;
    font-family: "Montserrat", sans-serif;
    padding: var(--size-md);
}


#side-dashboard {
    cursor: pointer;
    background: var(--steel-blue);


    /* grid elements */
    display: grid;
    grid-template-columns: 20% 80%;
    grid-template-rows: auto;
}


#side-dashbard .icon {
    padding-left: var(--size-md);
    padding-right: var(--size-md);
}


#side-dashboard .main-container {
    display: flex;
    flex-direction: column;   
}

#side-dashboard .main-container div{
   margin: 2px;
}


#sidebar-icons {
    background: rgba(0, 0, 0, 0.849);
    padding-top: var(--size-xlg);
    padding-left: var(--size-md);
    padding-right: var(--size-lg);
}


.sidebar-icon {
    /* sizes */
    height: 25px;
    width: 25px;

    border-radius: 5%;
    cursor: pointer;
    margin-top: var(--size-md);
    opacity: 0.5;
}

.sidebar-icon:hover {
    transform: rotate(45deg);
    opacity: 0.7;
}



/* navigation section */
#navigation {
    border: 2px solid lavender;
    cursor: pointer;
}

#navigation:hover {
    background: ghostwhite;
}

#navigation .wrapper .nav {
  
    background: var(--white);
    padding: var(--size-lg);
    border-radius: 2%;
}

.navigation__nav-body {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: auto;
    column-gap: var(--size-lg);
}


.nav-element {
    position: relative;
}


.notification-badge {
    /* position elements */
    position: absolute;
    top: -10px;
    right: -14px;

    background-color: red;
    color: white;
    border-radius: 50%;

    cursor: pointer;
    font-weight: bold;
    font-size:  0.75rem;
    line-height: 1;
    min-width: 18px;
    padding: var(--size-xs);
    text-align: center;

  }

   /* Hide the badge if there's no count */
  .notification-badge[data-count="0"] {
    display: none;
  }

 
  .dropdown {

   
    width: 400px;
   

  }


  .notification-dropdown {
    /* positioning */
    
    width: 800px;
    height: 350px;
    overflow-y: scroll;
    overflow-x: hidden;
   
  }

  
.dropdown,
.notification-dropdown {
    position: absolute;
    right: 10px;

    background: white;
    box-shadow: var(--box-shadow);
    cursor: pointer;
    padding: var(--size-sm);

    opacity: 0;
    visibility: hidden;
    transition: opacity 0.3s ease-in-out, visibility 0s 0.3s;
}

.dropdown.show {
    opacity: 1;
    visibility: visible;
    transition: opacity 0.3s ease-in-out, visibility 0s 0s;
  }
  
.notification-dropdown.show {
    opacity: 1;
    visibility: visible;
    transition: opacity 0.3s ease-in-out, visibility 0s 0s;
}


  .profile-info {

    /* grid elements */
    display: grid;
    grid-template-columns: 25% 75%;
    grid-template-rows: auto;
    column-gap: 16px;

    background: ghostwhite;
    border: 2px solid lavender;
  }


  .profile-icon {
    width: 90px;
    height: 90px;
    transform: scale(0.8);
    cursor: pointer;
  }

  .account-icon:hover,
  .profile-icon:hover {
    transform: scale(0.6);
  }

  .account-info .value {
    font-weight: bolder;
    color: green;
  }

  .account-settings div {
    background: white;
    border: 2px solid lavender;
    display: flex;
   
    /* sizes */
    margin-top: var(--size-sm);
    padding-top: var(--size-sm);
    padding-bottom: var(--size-sm);

  }

  .account-settings div:hover {
    background-color: ghostwhite;
    color: green;
    font-weight: bold;
  }
  
  .account-settings div img {
    /* paddings */
    padding-right: var(--size-md);
    padding-left: var(--size-sm);

    height: 30px;
    transform: translateY(10px);
  
  }

 .slogan {
    color: var(--darker-red);
 }

 

 /* Notification */

 .notification-msg {
    display: grid;
    grid-template-columns: 10% 60% 15% 15%;
    grid-template-rows: auto;
    column-gap: var(--size-md);
    margin-bottom: var(--size-sm);
    
   
  
    
 }

 .notification-msg a small {
    font-family: "Poppins", sans-serif;
    font-weight: 200;
    
 }

 .notification-msg .notification-alert {
    text-decoration: none;
 }

 .notification-msg .notification-alert small {
    font-size: 0.875rem; /* 14px = 0.875rem (assuming that 1rem = 16px) */
    color: #555;
    font-weight: normal;
 }


 .no-notification {
    height: 350px;
    background: ghostwhite;
    display: flex;
    flex-direction: column;
    text-transform: capitalize;
    display: none;
    overflow: hidden;
    border: 2px solid lavender;
 }

 .no-notification p {
    opacity: 0.6;
    font-stretch: expanded;
 }

 .no-notification img {
    height: 60px;
    width: 60px;
    opacity: 0.4;
 }


 /* The spinner */
.spinner {
    /* display: none; */
    width: 50px;
    height: 50px;
    border: 8px solid #f3f3f3;      /* Light grey */
    border-top: 8px solid #3498db;  /* Blue */
    border-radius: 50%;
    animation: spin 1.5s linear infinite;

    /* position */
    position: fixed;
    top: 20%;
    left: 60%;
    right: 50%;
    bottom: 50%;
}


/* Keyframes for spin animation */
@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

